--- a/index.html
+++ b/index.html
@@ -1,13 +1,67 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Alexander Zhdanov – DevOps Engineer Resume</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Резюме — Жданов Александр</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Alexander Zhdanov</h1>
-  <h2>DevOps Engineer</h2>
-  <p>контакты, опыт, навыки и т.д.</p>
+  <div class="container">
+    <header>
+      <h1>Жданов Александр Александрович</h1>
+      <p class="subtitle">DevOps-инженер</p>
+      <p class="contacts">
+        📞 +7 (977) 581-62-65 • ✉️ gosurasu@gmail.com • Telegram: @ignoretheparty <br>
+        Москва, Россия
+      </p>
+    </header>
+
+    <section>
+      <h2>Опыт работы</h2>
+      <div class="job">
+        <h3>Инженер по серверной инфраструктуре</h3>
+        <p class="org">СИБИНТЕК, Москва <span class="date">Октябрь 2024 — настоящее время</span></p>
+        <ul>
+          <li>Администрирование серверов Linux: установка, настройка, работа с логами</li>
+          <li>Поддержка инфраструктуры, устранение инцидентов, анализ причин сбоев</li>
+          <li>Docker, Kubernetes (Helm), деплой сервисов и сопровождение приложений</li>
+          <li>Nginx: проксирование и конфигурация веб-сервисов</li>
+          <li>PostgreSQL: управление пользователями, резервное копирование</li>
+          <li>Мониторинг: Prometheus, Grafana (метрики, дашборды, алерты)</li>
+          <li>Автоматизация: Bash-скрипты</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Образование</h2>
+      <p><strong>НИТУ «МИСиС»</strong>, Москва (Прикладная информатика)<br>
+      Неоконченное высшее, 2026</p>
+    </section>
+
+    <section>
+      <h2>Навыки</h2>
+      <p>
+        Linux • Bash • PostgreSQL • Docker • Kubernetes • Helm • Nginx • Prometheus • Grafana • TCP/IP • Ansible • Git/Gitlab
+      </p>
+    </section>
+
+    <section>
+      <h2>Языки</h2>
+      <p>Русский — Родной<br>Английский — B2 (средне-продвинутый)</p>
+    </section>
+
+    <section>
+      <h2>Обо мне</h2>
+      <p>
+        DevOps-инженер с практическим опытом администрирования и автоматизации процессов. 
+        Умею работать с Docker и Kubernetes, настраивать Nginx, управлять PostgreSQL и строить мониторинг. 
+        Сфокусирован на стабильности инфраструктуры, умею быстро анализировать проблемы и внедрять решения. 
+        Постоянно развиваюсь и изучаю новые инструменты.
+      </p>
+    </section>
+  </div>
 </body>
 </html>
