--- a/index.html
+++ b/index.html
@@ -1,67 +1,226 @@
-<!-- index.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Резюме — Жданов Александр</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Жданов Александр — devops engineer</title>
+  <meta name="description" content="devops engineer · kubernetes · docker · ci/cd · monitoring" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#f3f6fb;
+      --card:#ffffff;
+      --muted:#708099;
+      --accent-1:#0f172a;
+      --accent-2:#2563eb;
+      --glass: rgba(255,255,255,0.6);
+      --green:#06b6d4;
+      --radius:14px;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background:linear-gradient(180deg,var(--bg),#eef4fb);
+      color:var(--accent-1);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:40px 22px;
+    }
+    .paper{
+      max-width:1100px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 320px 1fr;
+      gap:28px;
+      align-items:start;
+    }
+    .left{
+      position:sticky; top:28px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.75), rgba(255,255,255,0.9));
+      border-radius:var(--radius);
+      box-shadow:0 8px 30px rgba(16,24,40,0.08);
+      padding:28px;
+      min-height:220px;
+    }
+    .right{
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:0 10px 40px rgba(16,24,40,0.06);
+      padding:34px;
+    }
+    .avatar{
+      width:88px;height:88px;border-radius:18px;background:linear-gradient(135deg,var(--accent-2),#06b6d4);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:26px;margin-bottom:14px;
+    }
+    .name{font-size:20px;font-weight:700;margin:0 0 6px 0;text-transform:lowercase}
+    .meta{font-size:13px;color:var(--muted);margin-bottom:10px}
+    .tag{display:inline-block;background:rgba(37,99,235,0.09);color:var(--accent-2);font-weight:600;padding:6px 10px;border-radius:999px;font-size:13px;margin-right:8px}
+
+    h2{font-size:16px;margin:0 0 12px 0;color:var(--accent-1);text-transform:lowercase}
+    .section{margin-bottom:18px}
+    .contact-list{font-size:14px;color:var(--muted);line-height:1.6}
+    .contact-list a{color:inherit;text-decoration:none}
+
+    .skill{margin:8px 0}
+    .skill .label{display:flex;justify-content:space-between;font-size:13px;color:var(--muted);margin-bottom:6px}
+    .bar{height:10px;background:#eef6ff;border-radius:999px;overflow:hidden}
+    .bar > i{display:block;height:100%;background:linear-gradient(90deg,var(--accent-2),var(--green));width:60%;border-radius:999px;transition:width .7s ease}
+
+    .chips{display:flex;flex-wrap:wrap;gap:8px}
+    .chip{background:linear-gradient(180deg,#f6fbff,#ffffff);padding:8px 10px;border-radius:10px;font-size:13px;color:var(--accent-1);box-shadow:0 4px 14px rgba(37,99,235,0.06)}
+
+    .title-main{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .title-main h1{font-size:26px;margin:0;text-transform:lowercase}
+    .subtitle{color:var(--muted);font-weight:600}
+
+    .summary{margin-top:12px;color:#334155;font-size:15px}
+
+    .job{margin-bottom:18px}
+    .job h3{margin:0;font-size:15px}
+    .job .org{color:var(--muted);font-size:13px;margin-top:6px}
+    .job ul{margin:10px 0 0 16px}
+    .job li{margin-bottom:6px}
+
+    .footer{display:flex;justify-content:space-between;align-items:center;margin-top:18px;color:var(--muted);font-size:13px}
+
+    /* responsive */
+    @media (max-width:880px){
+      .paper{grid-template-columns:1fr;}
+      .left{position:relative}
+      .right{order:2}
+    }
+
+    /* print */
+    @media print{
+      body{background:white;padding:0}
+      .paper{box-shadow:none}
+      .left{position:static}
+    }
+
+    /* subtle entrance */
+    .bar > i{width:0}
+    html.loaded .bar > i{width:var(--w,60%)}
+
+    /* small helpers */
+    .muted{color:var(--muted);font-size:13px}
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Жданов Александр Александрович</h1>
-      <p class="subtitle">DevOps-инженер</p>
-      <p class="contacts">
-        📞 +7 (977) 581-62-65 • ✉️ gosurasu@gmail.com • Telegram: @ignoretheparty <br>
-        Москва, Россия
-      </p>
-    </header>
+  <div class="paper" role="main">
+    <aside class="left">
+      <div class="avatar">АЖ</div>
+      <div class="name">Жданов Александр Александрович</div>
+      <div class="meta">DevOps‑инженер • 22 года</div>
 
-    <section>
-      <h2>Опыт работы</h2>
-      <div class="job">
-        <h3>Инженер по серверной инфраструктуре</h3>
-        <p class="org">СИБИНТЕК, Москва <span class="date">Октябрь 2024 — настоящее время</span></p>
-        <ul>
-          <li>Администрирование серверов Linux: установка, настройка, работа с логами</li>
-          <li>Поддержка инфраструктуры, устранение инцидентов, анализ причин сбоев</li>
-          <li>Docker, Kubernetes (Helm), деплой сервисов и сопровождение приложений</li>
-          <li>Nginx: проксирование и конфигурация веб-сервисов</li>
-          <li>PostgreSQL: управление пользователями, резервное копирование</li>
-          <li>Мониторинг: Prometheus, Grafana (метрики, дашборды, алерты)</li>
-          <li>Автоматизация: Bash-скрипты</li>
-        </ul>
+      <div class="section">
+        <h2>контакты</h2>
+        <div class="contact-list">
+          <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a> — предпочитаемый способ связи</div>
+          <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
+          <div>telegram: <a href="https://t.me/ignoretheparty" target="_blank">@ignoretheparty</a></div>
+          <div>город: Москва</div>
+          <div>гражданство: россия</div>
+          <div>не готов к переезду • не готов к командировкам</div>
+        </div>
       </div>
-    </section>
 
-    <section>
-      <h2>Образование</h2>
-      <p><strong>НИТУ «МИСиС»</strong>, Москва (Прикладная информатика)<br>
-      Неоконченное высшее, 2026</p>
-    </section>
+      <div class="section">
+        <h2>навыки</h2>
+        <div class="skill">
+          <div class="label"><span>linux</span><span>85%</span></div>
+          <div class="bar" aria-hidden><i style="--w:85%"></i></div>
+        </div>
+        <div class="skill">
+          <div class="label"><span>docker</span><span>80%</span></div>
+          <div class="bar" aria-hidden><i style="--w:80%"></i></div>
+        </div>
+        <div class="skill">
+          <div class="label"><span>kubernetes / helm</span><span>70%</span></div>
+          <div class="bar" aria-hidden><i style="--w:70%"></i></div>
+        </div>
+        <div class="skill">
+          <div class="label"><span>postgresql</span><span>65%</span></div>
+          <div class="bar" aria-hidden><i style="--w:65%"></i></div>
+        </div>
+      </div>
 
-    <section>
-      <h2>Навыки</h2>
-      <p>
-        Linux • Bash • PostgreSQL • Docker • Kubernetes • Helm • Nginx • Prometheus • Grafana • TCP/IP • Ansible • Git/Gitlab
-      </p>
-    </section>
+      <div class="section">
+        <h2>технологии</h2>
+        <div class="chips">
+          <div class="chip">linux</div>
+          <div class="chip">docker</div>
+          <div class="chip">kubernetes</div>
+          <div class="chip">helm</div>
+          <div class="chip">nginx</div>
+          <div class="chip">postgresql</div>
+          <div class="chip">prometheus</div>
+          <div class="chip">grafana</div>
+          <div class="chip">bash</div>
+          <div class="chip">ansible</div>
+          <div class="chip">git / gitlab</div>
+        </div>
+      </div>
 
-    <section>
-      <h2>Языки</h2>
-      <p>Русский — Родной<br>Английский — B2 (средне-продвинутый)</p>
-    </section>
+      <div class="section">
+        <h2>языки</h2>
+        <div class="muted">русский — родной<br>английский — b2 (средне-продвинутый)</div>
+      </div>
+    </aside>
 
-    <section>
-      <h2>Обо мне</h2>
-      <p>
-        DevOps-инженер с практическим опытом администрирования и автоматизации процессов. 
-        Умею работать с Docker и Kubernetes, настраивать Nginx, управлять PostgreSQL и строить мониторинг. 
-        Сфокусирован на стабильности инфраструктуры, умею быстро анализировать проблемы и внедрять решения. 
-        Постоянно развиваюсь и изучаю новые инструменты.
-      </p>
-    </section>
+    <main class="right">
+      <div class="title-main">
+        <div>
+          <h1>Жданов Александр</h1>
+          <div class="subtitle">DevOps‑инженер</div>
+        </div>
+        <div class="tag">devops · ci/cd · infra</div>
+      </div>
+
+      <div class="summary">
+        DevOps‑инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. умею работать с docker и kubernetes, настраивать nginx, администрировать postgresql, а также строить мониторинг на prometheus и grafana. фокус на доступности и устойчивости инфраструктуры — быстро анализирую проблемы и внедряю решения.
+      </div>
+
+      <section class="section">
+        <h2>опыт работы</h2>
+        <article class="job">
+          <h3>инженер по серверной инфраструктуре</h3>
+          <div class="org">СИБИНТЕК, Москва <span class="muted">• октябрь 2024 — настоящее время (1 год)</span></div>
+          <ul>
+            <li>администрирование серверов linux: установка, настройка, работа с логами</li>
+            <li>поддержка инфраструктуры: контроль доступности сервисов, диагностика и устранение инцидентов</li>
+            <li>работа с контейнерами: запуск и сопровождение приложений в docker</li>
+            <li>kubernetes: деплой сервисов через helm, управление pod/deployment/service, анализ логов</li>
+            <li>настройка веб-сервисов в nginx: проксирование и базовые конфигурации</li>
+            <li>postgresql: управление пользователями, резервное копирование и восстановление</li>
+            <li>мониторинг: prometheus и grafana (метрики, дашборды, алерты)</li>
+            <li>автоматизация: bash-скрипты (резервное копирование, обновления, мониторинг)</li>
+            <li>документирование инфраструктуры и взаимодействие с командами разработки</li>
+          </ul>
+        </article>
+      </section>
+
+      <section class="section">
+        <h2>образование</h2>
+        <div class="muted">СИБИНТЕК, ООО ИК — Информационные технологии, системная интеграция<br>НИТУ «МИСиС», Москва — Прикладная информатика (неоконченное высшее, 2026)</div>
+      </section>
+
+      <section class="section">
+        <h2>дополнительно</h2>
+        <p class="muted">готовность: полная занятость, удаленная работа. желаемая должность: DevOps‑инженер. опыт работы: 1 год. место проживания: москва. резюме обновлено 1 сентября 2025 в 20:44.</p>
+      </section>
+
+      <div class="footer">
+        <div class="muted">навыки: linux · bash · postgresql · docker · kubernetes · helm · nginx · prometheus · grafana · tcp/ip · ansible · git</div>
+        <div class="muted">© Жданов Александр</div>
+      </div>
+    </main>
   </div>
+
+  <script>
+    // плавная анимация баров после загрузки
+    window.addEventListener('load',()=>document.documentElement.classList.add('loaded'));
+  </script>
 </body>
 </html>
