--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Жданов Александр — devops engineer</title>
-  <meta name="description" content="devops engineer · kubernetes · docker · ci/cd · monitoring" />
+  <title>Жданов Александр — DevOps Engineer</title>
+  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Monitoring" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -54,11 +54,11 @@
     .avatar{
       width:88px;height:88px;border-radius:18px;background:linear-gradient(135deg,var(--accent-2),#06b6d4);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:26px;margin-bottom:14px;
     }
-    .name{font-size:20px;font-weight:700;margin:0 0 6px 0;text-transform:lowercase}
+    .name{font-size:20px;font-weight:700;margin:0 0 6px 0;}
     .meta{font-size:13px;color:var(--muted);margin-bottom:10px}
     .tag{display:inline-block;background:rgba(37,99,235,0.09);color:var(--accent-2);font-weight:600;padding:6px 10px;border-radius:999px;font-size:13px;margin-right:8px}
 
-    h2{font-size:16px;margin:0 0 12px 0;color:var(--accent-1);text-transform:lowercase}
+    h2{font-size:16px;margin:0 0 12px 0;color:var(--accent-1);}
     .section{margin-bottom:18px}
     .contact-list{font-size:14px;color:var(--muted);line-height:1.6}
     .contact-list a{color:inherit;text-decoration:none}
@@ -72,7 +72,7 @@
     .chip{background:linear-gradient(180deg,#f6fbff,#ffffff);padding:8px 10px;border-radius:10px;font-size:13px;color:var(--accent-1);box-shadow:0 4px 14px rgba(37,99,235,0.06)}
 
     .title-main{display:flex;align-items:center;justify-content:space-between;gap:12px}
-    .title-main h1{font-size:26px;margin:0;text-transform:lowercase}
+    .title-main h1{font-size:26px;margin:0;}
     .subtitle{color:var(--muted);font-weight:600}
 
     .summary{margin-top:12px;color:#334155;font-size:15px}
@@ -112,60 +112,60 @@
     <aside class="left">
       <div class="avatar">АЖ</div>
       <div class="name">Жданов Александр Александрович</div>
-      <div class="meta">DevOps‑инженер • 22 года</div>
+      <div class="meta">DevOps-инженер • 22 года</div>
 
       <div class="section">
-        <h2>контакты</h2>
+        <h2>Контакты</h2>
         <div class="contact-list">
           <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a> — предпочитаемый способ связи</div>
           <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
-          <div>telegram: <a href="https://t.me/ignoretheparty" target="_blank">@ignoretheparty</a></div>
-          <div>город: Москва</div>
-          <div>гражданство: россия</div>
-          <div>не готов к переезду • не готов к командировкам</div>
+          <div>Telegram: <a href="https://t.me/ignoretheparty" target="_blank">@ignoretheparty</a></div>
+          <div>Город: Москва</div>
+          <div>Гражданство: Россия</div>
+          <div>Не готов к переезду • Не готов к командировкам</div>
         </div>
       </div>
 
       <div class="section">
-        <h2>навыки</h2>
+        <h2>Навыки</h2>
         <div class="skill">
-          <div class="label"><span>linux</span><span>85%</span></div>
+          <div class="label"><span>Linux</span><span>85%</span></div>
           <div class="bar" aria-hidden><i style="--w:85%"></i></div>
         </div>
         <div class="skill">
-          <div class="label"><span>docker</span><span>80%</span></div>
+          <div class="label"><span>Docker</span><span>80%</span></div>
           <div class="bar" aria-hidden><i style="--w:80%"></i></div>
         </div>
         <div class="skill">
-          <div class="label"><span>kubernetes / helm</span><span>70%</span></div>
+          <div class="label"><span>Kubernetes / Helm</span><span>70%</span></div>
           <div class="bar" aria-hidden><i style="--w:70%"></i></div>
         </div>
         <div class="skill">
-          <div class="label"><span>postgresql</span><span>65%</span></div>
+          <div class="label"><span>PostgreSQL</span><span>65%</span></div>
           <div class="bar" aria-hidden><i style="--w:65%"></i></div>
         </div>
       </div>
 
       <div class="section">
-        <h2>технологии</h2>
+        <h2>Технологии</h2>
         <div class="chips">
-          <div class="chip">linux</div>
-          <div class="chip">docker</div>
-          <div class="chip">kubernetes</div>
-          <div class="chip">helm</div>
-          <div class="chip">nginx</div>
-          <div class="chip">postgresql</div>
-          <div class="chip">prometheus</div>
-          <div class="chip">grafana</div>
-          <div class="chip">bash</div>
-          <div class="chip">ansible</div>
-          <div class="chip">git / gitlab</div>
+          <div class="chip">Linux</div>
+          <div class="chip">Docker</div>
+          <div class="chip">Kubernetes</div>
+          <div class="chip">Helm</div>
+          <div class="chip">Nginx</div>
+          <div class="chip">PostgreSQL</div>
+          <div class="chip">Prometheus</div>
+          <div class="chip">Grafana</div>
+          <div class="chip">Bash</div>
+          <div class="chip">Ansible</div>
+          <div class="chip">Git / GitLab</div>
         </div>
       </div>
 
       <div class="section">
-        <h2>языки</h2>
-        <div class="muted">русский — родной<br>английский — b2 (средне-продвинутый)</div>
+        <h2>Языки</h2>
+        <div class="muted">Русский — Родной<br>Английский — B2 (средне-продвинутый)</div>
       </div>
     </aside>
 
@@ -173,46 +173,46 @@
       <div class="title-main">
         <div>
           <h1>Жданов Александр</h1>
-          <div class="subtitle">DevOps‑инженер</div>
+          <div class="subtitle">DevOps-инженер</div>
         </div>
-        <div class="tag">devops · ci/cd · infra</div>
+        <div class="tag">DevOps · CI/CD · Infra</div>
       </div>
 
       <div class="summary">
-        DevOps‑инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. умею работать с docker и kubernetes, настраивать nginx, администрировать postgresql, а также строить мониторинг на prometheus и grafana. фокус на доступности и устойчивости инфраструктуры — быстро анализирую проблемы и внедряю решения.
+        DevOps-инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. Умею работать с Docker и Kubernetes, настраивать Nginx, администрировать PostgreSQL, а также строить мониторинг на Prometheus и Grafana. Фокус на доступности и устойчивости инфраструктуры — быстро анализирую проблемы и внедряю решения.
       </div>
 
       <section class="section">
-        <h2>опыт работы</h2>
+        <h2>Опыт работы</h2>
         <article class="job">
-          <h3>инженер по серверной инфраструктуре</h3>
-          <div class="org">СИБИНТЕК, Москва <span class="muted">• октябрь 2024 — настоящее время (1 год)</span></div>
+          <h3>Инженер по серверной инфраструктуре</h3>
+          <div class="org">СИБИНТЕК, Москва <span class="muted">• Октябрь 2024 — настоящее время (1 год)</span></div>
           <ul>
-            <li>администрирование серверов linux: установка, настройка, работа с логами</li>
-            <li>поддержка инфраструктуры: контроль доступности сервисов, диагностика и устранение инцидентов</li>
-            <li>работа с контейнерами: запуск и сопровождение приложений в docker</li>
-            <li>kubernetes: деплой сервисов через helm, управление pod/deployment/service, анализ логов</li>
-            <li>настройка веб-сервисов в nginx: проксирование и базовые конфигурации</li>
-            <li>postgresql: управление пользователями, резервное копирование и восстановление</li>
-            <li>мониторинг: prometheus и grafana (метрики, дашборды, алерты)</li>
-            <li>автоматизация: bash-скрипты (резервное копирование, обновления, мониторинг)</li>
-            <li>документирование инфраструктуры и взаимодействие с командами разработки</li>
+            <li>Администрирование серверов Linux: установка, настройка, работа с логами.</li>
+            <li>Поддержка инфраструктуры: контроль доступности сервисов, диагностика и устранение инцидентов.</li>
+            <li>Работа с контейнерами: запуск и сопровождение приложений в Docker.</li>
+            <li>Kubernetes: деплой сервисов через Helm, управление Pod/Deployment/Service, анализ логов.</li>
+            <li>Настройка веб-сервисов в Nginx: проксирование и базовые конфигурации.</li>
+            <li>PostgreSQL: управление пользователями, резервное копирование и восстановление.</li>
+            <li>Мониторинг: Prometheus и Grafana (метрики, дашборды, алерты).</li>
+            <li>Автоматизация: Bash-скрипты (резервное копирование, обновления, мониторинг).</li>
+            <li>Документирование инфраструктуры и взаимодействие с командами разработки.</li>
           </ul>
         </article>
       </section>
 
       <section class="section">
-        <h2>образование</h2>
-        <div class="muted">СИБИНТЕК, ООО ИК — Информационные технологии, системная интеграция<br>НИТУ «МИСиС», Москва — Прикладная информатика (неоконченное высшее, 2026)</div>
+        <h2>Образование</h2>
+        <div class="muted">СИБИНТЕК, ООО ИК — Информационные технологии, системная интеграция<br>НИТУ «МИСиС», Москва — Прикладная информатика (Неоконченное высшее, 2026)</div>
       </section>
 
       <section class="section">
-        <h2>дополнительно</h2>
-        <p class="muted">готовность: полная занятость, удаленная работа. желаемая должность: DevOps‑инженер. опыт работы: 1 год. место проживания: москва. резюме обновлено 1 сентября 2025 в 20:44.</p>
+        <h2>Дополнительно</h2>
+        <p class="muted">Готовность: полная занятость, удаленная работа. Желаемая должность: DevOps-инженер. Опыт работы: 1 год. Место проживания: Москва. Резюме обновлено 1 сентября 2025 в 20:44.</p>
       </section>
 
       <div class="footer">
-        <div class="muted">навыки: linux · bash · postgresql · docker · kubernetes · helm · nginx · prometheus · grafana · tcp/ip · ansible · git</div>
+        <div class="muted">Навыки: Linux · Bash · PostgreSQL · Docker · Kubernetes · Helm · Nginx · Prometheus · Grafana · TCP/IP · Ansible · Git</div>
         <div class="muted">© Жданов Александр</div>
       </div>
     </main>
