--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       --muted:#64748b;
       --accent:#0f172a;
       --accent-2:#2563eb;
-      --glass: rgba(255,255,255,0.7);
       --radius:12px;
-      --gap:24px;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -46,7 +44,18 @@
       box-shadow:0 8px 30px rgba(16,24,40,0.06);
       padding:24px;
     }
-    .avatar{width:84px;height:84px;border-radius:14px;background:linear-gradient(135deg,var(--accent-2),#06b6d4);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:26px;margin-bottom:12px}
+    .avatar{
+      width:84px; height:84px;
+      border-radius:14px;
+      background:linear-gradient(135deg,var(--accent-2),#06b6d4);
+      display:flex; align-items:center; justify-content:center;
+      color:white; font-weight:700; font-size:26px;
+      margin-bottom:12px;
+      opacity:0; transform:translateY(8px) scale(.98);
+      transition:opacity .45s ease, transform .45s ease;
+    }
+    .avatar.visible{opacity:1; transform:none}
+
     .name{font-size:18px;font-weight:700;margin:0 0 6px 0}
     .meta{font-size:13px;color:var(--muted);margin-bottom:12px}
 
@@ -61,13 +70,31 @@
     .skill-item{background:#f8fbff;border-radius:10px;padding:8px 10px;font-size:13px;color:var(--accent);box-shadow:0 6px 18px rgba(16,24,40,0.03)}
 
     .chips{display:flex;flex-wrap:wrap;gap:8px}
-    .chip{background:linear-gradient(180deg,#ffffff,#f6fbff);padding:8px 10px;border-radius:8px;font-size:13px;color:var(--accent);box-shadow:0 6px 18px rgba(16,24,40,0.03)}
+    .chip{
+      background:linear-gradient(180deg,#ffffff,#f6fbff);
+      padding:8px 10px;border-radius:8px;font-size:13px;color:var(--accent);
+      box-shadow:0 6px 18px rgba(16,24,40,0.03);
+      transition:transform .22s ease, box-shadow .22s ease;
+    }
+    .chip:hover{transform:translateY(-4px); box-shadow:0 12px 30px rgba(37,99,235,0.08);}
 
     /* right column */
     .right{background:var(--card);border-radius:var(--radius);box-shadow:0 10px 40px rgba(16,24,40,0.06);padding:34px}
     .title-main{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .title-main h1{font-size:28px;margin:0}
     .subtitle{color:var(--muted);font-weight:600}
+
+    .tag{
+      display:inline-block;
+      padding:8px 12px;
+      border-radius:10px;
+      background:linear-gradient(180deg,#ffffff,#f6fbff);
+      box-shadow:0 8px 20px rgba(37,99,235,0.04);
+      font-weight:600;
+      opacity:0; transform:translateY(8px) scale(.98);
+      transition:opacity .45s ease, transform .45s ease;
+    }
+    .tag.visible{opacity:1; transform:none}
 
     .summary{margin-top:12px;color:#334155;font-size:15px}
 
@@ -82,9 +109,8 @@
     .footer{display:flex;justify-content:space-between;align-items:center;margin-top:20px;color:var(--muted);font-size:13px}
 
     /* subtle animations (practical, unobtrusive) */
-    .fade-up{opacity:0;transform:translateY(8px);transition:opacity .5s ease,transform .5s ease}
-    .visible{opacity:1;transform:none}
-    .chip:hover{transform:translateY(-4px);transition:transform .25s ease}
+    .fade-up{opacity:0;transform:translateY(8px);transition:opacity .45s ease,transform .45s ease}
+    .fade-up.visible{opacity:1;transform:none}
 
     /* responsive */
     @media (max-width:880px){
@@ -103,7 +129,7 @@
 <body>
   <div class="paper" role="main">
     <aside class="left">
-      <div class="avatar">АЖ</div>
+      <div class="avatar" aria-hidden>АЖ</div>
       <div class="name">Жданов Александр Александрович</div>
       <div class="meta">DevOps Engineer · 22 года</div>
 
@@ -112,7 +138,7 @@
         <div class="contact-list">
           <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a> — предпочитаемый способ связи</div>
           <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
-          <div>Telegram: <a href="https://t.me/ignoretheparty" target="_blank">@ignoretheparty</a></div>
+          <div>Telegram: <a href="https://t.me/ignoretheparty" target="_blank" rel="noopener noreferrer">@ignoretheparty</a></div>
           <div>Город: Москва</div>
           <div>Гражданство: Россия</div>
           <div>Не готов к переезду • Не готов к командировкам</div>
@@ -126,7 +152,7 @@
           <div class="skill-item">Docker — контейнеризация</div>
           <div class="skill-item">Kubernetes / Helm — деплой и управление</div>
           <div class="skill-item">PostgreSQL — бэкап и восстановление</div>
-          <div class="skill-item">Nginx — настройка веб‑сервисов</div>
+          <div class="skill-item">Nginx — настройка веб-сервисов</div>
           <div class="skill-item">Prometheus / Grafana — мониторинг</div>
           <div class="skill-item">Bash / автоматизация</div>
           <div class="skill-item">Ansible / конфигурация</div>
@@ -152,7 +178,7 @@
 
       <div class="section">
         <h2>Языки</h2>
-        <div class="muted">Русский — Родной<br>Английский — B2 (средне‑продвинутый)</div>
+        <div class="muted">Русский — Родной<br>Английский — B2 (средне-продвинутый)</div>
       </div>
     </aside>
 
@@ -162,11 +188,11 @@
           <h1 class="fade-up">Жданов Александр</h1>
           <div class="subtitle muted">DevOps Engineer</div>
         </div>
-        <div class="tag chip">DevOps · CI/CD · Infra</div>
+        <div class="tag chip" aria-hidden>DevOps · CI/CD · Infra</div>
       </div>
 
       <div class="summary fade-up" style="transition-delay:.05s">
-        DevOps‑инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. Умею работать с Docker и Kubernetes, настраивать Nginx, администрировать PostgreSQL, а также строить мониторинг на Prometheus и Grafana. Фокус на доступности и отказоустойчивости инфраструктуры: быстро анализирую проблемы и внедряю рабочие решения.
+        DevOps-инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. Умею работать с Docker и Kubernetes, настраивать Nginx, администрировать PostgreSQL, а также строить мониторинг на Prometheus и Grafana. Фокус на доступности и отказоустойчивости инфраструктуры: быстро анализирую проблемы и внедряю рабочие решения.
       </div>
 
       <section class="section">
@@ -179,7 +205,7 @@
             <li>Поддержка инфраструктуры: контроль доступности сервисов, диагностика и устранение инцидентов.</li>
             <li>Работа с контейнерами и оркестрацией: Docker, Kubernetes (Helm).</li>
             <li>Мониторинг и алерты: Prometheus, Grafana.</li>
-            <li>Автоматизация задач: Bash‑скрипты, Ansible.</li>
+            <li>Автоматизация задач: Bash-скрипты, Ansible.</li>
             <li>Документирование инфраструктуры и взаимодействие с командами разработки.</li>
           </ul>
         </article>
@@ -192,7 +218,7 @@
 
       <section class="section">
         <h2 class="fade-up">Дополнительно</h2>
-        <p class="muted fade-up" style="transition-delay:.08s">Готовность: полная занятость, удаленная работа. Желательная должность: DevOps‑инженер. Опыт работы: 1 год. Место проживания: Москва. Резюме обновлено 1 сентября 2025 в 20:44.</p>
+        <p class="muted fade-up" style="transition-delay:.08s">Готовность: полная занятость, удаленная работа. Желаемая должность: DevOps-инженер. Опыт работы: 1 год. Место проживания: Москва. Резюме обновлено 1 сентября 2025 в 20:44.</p>
       </section>
 
       <div class="footer">
@@ -203,11 +229,27 @@
   </div>
 
   <script>
-    // trigger unobtrusive reveal animations on scroll
-    const obs = new IntersectionObserver((entries)=>{
-      entries.forEach(e=>{ if(e.isIntersecting){ e.target.classList.add('visible'); obs.unobserve(e.target); } });
-    },{threshold:0.12});
-    document.querySelectorAll('.fade-up').forEach(el=>obs.observe(el));
+    // unobtrusive reveal animations: avatar, tag and sections
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach(e => {
+        if (e.isIntersecting) {
+          e.target.classList.add('visible');
+          obs.unobserve(e.target);
+        }
+      });
+    }, { threshold: 0.12 });
+
+    document.addEventListener('DOMContentLoaded', () => {
+      // observe elements with fade-up
+      document.querySelectorAll('.fade-up').forEach(el => obs.observe(el));
+
+      // add fade-up behavior to avatar and tag, then observe them
+      const extras = document.querySelectorAll('.avatar, .tag');
+      extras.forEach(el => {
+        el.classList.add('fade-up');
+        obs.observe(el);
+      });
+    });
   </script>
 </body>
 </html>
